Use RuneLite Filepath for persistence